@@ -30,10 +30,10 @@ class TodoyuFormElement_DatabaseRelation extends TodoyuFormElement {
 	 * Constructor of the class
 	 *
 	 * @param	String			$name
-	 * @param	TodoyuFieldset	$fieldset
+	 * @param	TodoyuFormFieldset	$fieldset
 	 * @param	Array			$config
 	 */
-	public function __construct($name, TodoyuFieldset $fieldset, array $config  = array()) {
+	public function __construct($name, TodoyuFormFieldset $fieldset, array $config  = array()) {
 		parent::__construct('databaseRelation', $name, $fieldset, $config);
 	}
 
