@@ -32,10 +32,10 @@ class TodoyuFormElement_RTE extends TodoyuFormElement_Textarea {
 	 * Initialize RTE form element
 	 *
 	 * @param	String		$name
-	 * @param	TodoyuFieldset	$fieldset
+	 * @param	TodoyuFormFieldset	$fieldset
 	 * @param	Array		$config
 	 */
-	public function __construct($name, TodoyuFieldset $fieldset, array $config = array()) {
+	public function __construct($name, TodoyuFormFieldset $fieldset, array $config = array()) {
 		TodoyuFormElement::__construct('RTE', $name, $fieldset, $config);
 	}
 
