@@ -30,10 +30,10 @@ class TodoyuFormElement_SaveButton extends TodoyuFormElement_Button {
 	 * Initialize saveButton element
 	 *
 	 * @param	String			$name
-	 * @param	TodoyuFieldset	$fieldset
+	 * @param	TodoyuFormFieldset	$fieldset
 	 * @param	Array			$config
 	 */
-	public function __construct($name, TodoyuFieldset $fieldset, array $config = array()) {
+	public function __construct($name, TodoyuFormFieldset $fieldset, array $config = array()) {
 		TodoyuFormElement::__construct('saveButton', $name, $fieldset, $config);
 	}
 
