@@ -30,10 +30,10 @@ class TodoyuFormElement_Select extends TodoyuFormElement {
 	 * Initialize
 	 *
 	 * @param	String			$name
-	 * @param	TodoyuFieldset	$fieldset
+	 * @param	TodoyuFormFieldset	$fieldset
 	 * @param	Array			$config
 	 */
-	public function __construct($name, TodoyuFieldset $fieldset, array $config = array()) {
+	public function __construct($name, TodoyuFormFieldset $fieldset, array $config = array()) {
 		parent::__construct('select', $name, $fieldset, $config);
 
 		$this->setValue(array());
