@@ -30,10 +30,10 @@ class TodoyuFormElement_SelectGrouped extends TodoyuFormElement_Select {
 	 * Initialize
 	 *
 	 * @param	String				$name
-	 * @param	TodoyuFieldset		$fieldset
+	 * @param	TodoyuFormFieldset		$fieldset
 	 * @param	Array				$config
 	 */
-	public function __construct($name, TodoyuFieldset $fieldset, array $config = array()) {
+	public function __construct($name, TodoyuFormFieldset $fieldset, array $config = array()) {
 		TodoyuFormElement::__construct('selectgrouped', $name, $fieldset, $config);
 
 		if( ! $this->isLazyInit() ) {
