@@ -32,10 +32,10 @@ class TodoyuFormElement_Upload extends TodoyuFormElement {
 	 * Constructor
 	 *
 	 * @param	String		$name
-	 * @param	TodoyuFieldset	$fieldset
+	 * @param	TodoyuFormFieldset	$fieldset
 	 * @param	Array		$config
 	 */
-	public function __construct($name, TodoyuFieldset $fieldset, array $config = array()) {
+	public function __construct($name, TodoyuFormFieldset $fieldset, array $config = array()) {
 		parent::__construct('upload', $name, $fieldset, $config);
 	}
 
